--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "graphql": "^16.6.0",
+    "isomorphic-dompurify": "^1.2.0",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "next": "13.2.4",
     "node-fetch": "^2.6.1",
+    "preline": "^1.7.0",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
