--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 NEXT_PUBLIC_WOOCOMMERCE_STORE_URL=https://woocommerce-186938-3327038.cloudwaysapps.com
 WC_CONSUMER_KEY=ck_393bdb32f0788db401f15ef5a74e0a9209055c78
 WC_CONSUMER_SECRET=cs_ce9c91892917d08314554d6c19f443d9970b91c9
+NEXT_PUBLIC_JWT_SECRET=m8KmIfniZ+<V}TI;oi=7>qU,=(,.$14UHO|o7_8O gNb* (;*6Pz{-u&%%u]<80_
