--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
     "@apollo/client": "^3.7.10",
     "axios": "^1.3.4",
     "classnames": "^2.3.2",
+    "cookie": "^0.5.0",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "graphql": "^16.6.0",
     "isomorphic-dompurify": "^1.2.0",
+    "js-cookie": "^3.0.1",
+    "jsonwebtoken": "^9.0.0",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "next": "13.2.4",
     "node-fetch": "^2.6.1",
+    "nookies": "^2.5.2",
     "preline": "^1.7.0",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
