--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.10",
+    "@heroicons/react": "^2.0.16",
     "axios": "^1.3.4",
     "classnames": "^2.3.2",
     "cookie": "^0.5.0",
