--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@apollo/client": "^3.7.10",
     "@heroicons/react": "^2.0.16",
+    "atob": "^2.1.2",
     "axios": "^1.3.4",
     "classnames": "^2.3.2",
     "cookie": "^0.5.0",
